<resources>
    <string name="app_name">ADITS</string>
    <string name="submit">SUBMIT</string>
    <string name="name">NAME</string>
    <string name="tc_id_no">TC ID NUMBER</string>
    <string name="sign_up">Please enter your personal info for setting Adits up !</string>
    <string name="age">AGE</string>
    <string name="health_status">HEALTH STATUS</string>
    <string name="adits">ADITS</string>
    <string name="acil_durum">Acil Durum İmdat Takip Sistemi</string>
    <string name="emergency_aid_tracking_system">EMERGENCY AID TRACKING SYSTEM</string>
    <string name="via_computer_systems_limited_company">Via Computer Systems Limited Company</string>
    <string name="register_screen_app_logo">Register Screen App Logo</string>
    <string name="ssid">SSID:</string>
    <string name="dbm">dBm:</string>
    <string name="mac">Mac:</string>
    <string name="info_text">Select a network to see personal info. You can slide left to see Range Data and slide right to update personal info</string>
    <string name="name2">Name :</string>
    <string name="tc_id">Tc Id:</string>
    <string name="age2">Age :</string>
    <string name="health_status2">Health Status :</string>
    <string name="level">Level :</string>
    <string name="content_description_logo">The Logo of the Product.</string>
    <string name="info_range_text">Information text for Range Screen</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected !</string>
    <string name="healthStatus">Health Status</string>
    <string name="good">Good</string>
    <string name="Moderate">Moderate</string>
    <string name="Poor">Poor</string>
    <string name="Meter">Approximate Centimeter:</string>
    <string name="nameNoData">Name: No Data</string>
    <string name="tc_id_no_data">Tc Id: No Data</string>
    <string name="age_no_data">Age: No Data</string>
    <string name="health_no_data">Health Status: No Data</string>
    <string name="level_no_data">Level: No Data</string>
    <string name="network_not_connected">Network : Not Connected</string>
    <array name="Health">
        <item>@string/healthStatus</item>
        <item>@string/good</item>
        <item>@string/Moderate</item>
        <item>@string/Poor</item>
    </array>
    <string-array name="Status">
        <item>Good</item>
        <item>Moderate</item>
        <item>Poor</item>
    </string-array>
</resources>
