<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/button_bg"
    android:radius="15dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/name2"
        android:maxLines="1"
        android:layout_margin="5dp"
        />

    <TextView
        android:id="@+id/tcid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:text="@string/tc_id"
        android:maxLines="1"
        android:layout_margin="5dp"
        />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tcid"
        android:text="@string/age2"
        android:maxLines="1"
        android:layout_margin="5dp"
        />

    <TextView
        android:id="@+id/health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/age"
        android:text="@string/health_status2"
        android:maxLines="1"
        android:layout_margin="5dp"
        />

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/health"
        android:text="@string/level"
        android:maxLines="1"
        android:layout_margin="5dp"
        />



</RelativeLayout>