<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/wifiScreen"
    android:background="@drawable/list_bg2"
    android:fitsSystemWindows="true"
    android:layout_weight="1"
    >

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_text"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:textColor="@color/colorIceBlue"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/name_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name2"
        android:layout_centerHorizontal="true"
        android:textSize="27sp"
        android:textColor="@color/colorIceBlue"
        android:layout_marginTop="12dp"
        />

    <TextView
        android:id="@+id/tc_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tc_id"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_below="@id/name_info"
        />

    <TextView
        android:id="@+id/age_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age2"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_below="@id/tc_info"
        />

    <TextView
        android:id="@+id/health_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/health_status2"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_below="@id/age_info"
        />

    <TextView
        android:id="@+id/level_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_below="@id/health_info"
        />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/level_info"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="100dp"
        >
    </ListView>

</RelativeLayout>