<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcomeScreen"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <ImageView
        android:id="@+id/appLogo"
        android:contentDescription="@string/register_screen_app_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/app_logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="20dp"
        />

    <TextView
        android:id="@+id/adits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adits"
        android:textSize="40sp"
        android:layout_below="@id/appLogo"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/kayitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/adits"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/transparentWhite"
        android:textAlignment="center"
        />


    <EditText
        android:id="@+id/name_input"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@drawable/edittext_bg"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:layout_below="@id/kayitText"
        android:hint="@string/name"
        android:inputType="text"
        android:textAlignment="center"
        android:imeOptions="actionDone"
        android:layout_margin="5dp"
        android:textColorHint="@color/DarkGrey"
        android:textColor="@color/DarkGrey"
        android:maxLines="1"
        />

    <EditText
        android:id="@+id/tc_input"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@drawable/edittext_bg"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/name_input"
        android:hint="@string/tc_id_no"
        android:textAlignment="center"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:layout_margin="5dp"
        android:textColorHint="@color/DarkGrey"
        android:textColor="@color/DarkGrey"
        android:maxLines="1"
        android:maxLength="11"
        />

    <EditText
        android:id="@+id/age_input"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@drawable/edittext_bg"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:layout_below="@id/tc_input"
        android:hint="@string/age"
        android:textAlignment="center"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:layout_margin="5dp"
        android:textColorHint="@color/DarkGrey"
        android:textColor="@color/DarkGrey"
        android:maxLines="1"
        android:maxLength="3"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/relativeSpinner"
        android:layout_below="@id/age_input"
        android:layout_margin="5dp">
        <Spinner
            android:id="@+id/health_input"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAlignment="center"
            android:popupBackground="@color/White"
            android:spinnerMode="dropdown"
            android:background="@drawable/app_empty_bg_black"
            >
        </Spinner>
    </RelativeLayout>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:background="@drawable/button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/relativeSpinner"
        android:layout_margin="80dp"
        android:text="@string/submit"
        android:textSize="30sp"
        android:textColor="@color/brokenWhite"
        />

    <TextView
        android:id="@+id/companyNameWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/via_computer_systems_limited_company"
        android:textColor="@color/Grey"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>