<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="30dp"
    android:background="@drawable/button_bg"
    android:orientation="horizontal"
    android:padding="16dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:radius="15dp"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.8">

        <TextView
            android:id="@+id/ssid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ssid"
            android:textColor="@color/colorIceBlue"
            android:textSize="16sp"
            android:textStyle="bold"
            android:maxLines="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mac"
            android:layout_marginTop="2dp"
            android:text="@string/mac"
            android:textColor="@color/colorIceBlue"
            />

        <TextView
            android:id="@+id/dbm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/dbm"
            android:textColor="@color/White"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/connected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/connected"
            android:textColor="@color/Green"
            android:textSize="12sp"
            android:visibility="invisible"/>


    </LinearLayout>

    <TextView
        android:id="@+id/signal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:layout_weight="0.10"
        android:textAlignment="center"
        android:textColor="@color/DarkBlue"
        android:textSize="50sp"
        android:textStyle="bold" />

</LinearLayout>