<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_1"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/appLogoSplash"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/app_logo"
            />

        <TextView
            android:id="@+id/adits2"
            android:text="@string/adits"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/appLogoSplash"
            android:textSize="38sp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/adits3"
            android:text="@string/emergency_aid_tracking_system"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/adits2"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textAlignment="center"
            />


    </RelativeLayout>

    <TextView
        android:id="@+id/companyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/via_computer_systems_limited_company"
        android:textAlignment="center"
        android:textColor="@color/transparentWhite"
        android:layout_centerHorizontal="true"
        />


</RelativeLayout>