<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rangeScreen"
    android:background="@drawable/range_bg"
    android:padding="10dp"
    >

    <ImageView
        android:id="@+id/appLogoRange"
        android:contentDescription="@string/content_description_logo"
        android:background="@drawable/app_logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_width="60dp"
        android:layout_height="60dp"
        />

    <ImageView
        android:id="@+id/range_info"
        android:contentDescription="@string/info_range_text"
        android:background="@drawable/range_info3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/range_chart"
        android:paddingBottom="10dp"
        android:paddingStart="10dp"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_below="@id/range_info"
        >
    </com.jjoe64.graphview.GraphView>

    <TextView
        android:id="@+id/ssid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Connected Network : "
        android:layout_below="@id/range_info"
        android:layout_alignParentEnd="true"
        android:textSize="18sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/dbm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dbm"
        android:layout_below="@id/ssid"
        android:layout_alignParentEnd="true"
        android:textSize="16sp"
        android:textStyle="bold"
        />


</RelativeLayout>